--- a/hairista/Controller/DetailSalon/SalonDetail/HeaderSalonView/HeaderSalonView.xib
+++ b/hairista/Controller/DetailSalon/SalonDetail/HeaderSalonView/HeaderSalonView.xib
@@ -19,7 +19,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HeaderSalonView" id="U6b-Vx-4bR">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HeaderSalonView" id="U6b-Vx-4bR" customClass="HeaderSalonView">
             <rect key="frame" x="0.0" y="0.0" width="375" height="256"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
@@ -47,15 +47,22 @@
                             <color key="textColor" white="0.0" alpha="0.80113886443661975" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_rate" translatesAutoresizingMaskIntoConstraints="NO" id="IYg-3y-viS">
-                            <rect key="frame" x="96" y="47" width="80" height="20"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_start_grey" translatesAutoresizingMaskIntoConstraints="NO" id="IYg-3y-viS">
+                            <rect key="frame" x="96" y="53" width="80" height="20"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="20" id="Upt-tn-fjW"/>
                                 <constraint firstAttribute="width" constant="80" id="wNE-ey-ApL"/>
                             </constraints>
                         </imageView>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_star_yellow" translatesAutoresizingMaskIntoConstraints="NO" id="RTF-mJ-XPg">
+                            <rect key="frame" x="96" y="53" width="80" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="VjV-rt-vam"/>
+                                <constraint firstAttribute="width" constant="80" id="XEh-7f-yO7"/>
+                            </constraints>
+                        </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- 64 bình luận" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="elp-Vx-QgD">
-                            <rect key="frame" x="184" y="44" width="146" height="23"/>
+                            <rect key="frame" x="184" y="50" width="146" height="23"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="23" id="gAR-TH-nic"/>
                             </constraints>
@@ -72,7 +79,7 @@
                             <state key="normal" image="ic_favorite"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X7l-D3-Ohf">
-                            <rect key="frame" x="338" y="40" width="30" height="30"/>
+                            <rect key="frame" x="338" y="46" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="Ixr-A1-8pm"/>
                                 <constraint firstAttribute="width" constant="30" id="QBT-0q-TyG"/>
@@ -87,7 +94,7 @@
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123 Nguyễn Cư Trinh, P. Bến Nghé, Tp. Hồ Chí Minh" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BFu-C8-J7C">
-                            <rect key="frame" x="32" y="112" width="326" height="21.5"/>
+                            <rect key="frame" x="32" y="112" width="326" height="42.5"/>
                             <constraints>
                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="ARA-a5-Xjs"/>
                             </constraints>
@@ -96,7 +103,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0932188608" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UW7-0s-EIK">
-                            <rect key="frame" x="32" y="141.5" width="326" height="21"/>
+                            <rect key="frame" x="32" y="162.5" width="326" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="BGS-3u-si3"/>
                             </constraints>
@@ -104,7 +111,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dongvo512@gmail.com" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="28f-Mo-pvi">
-                            <rect key="frame" x="32" y="170.5" width="326" height="21"/>
+                            <rect key="frame" x="32" y="191.5" width="326" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="gAd-sx-Ghz"/>
                             </constraints>
@@ -112,7 +119,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mở cửa: 8:30 AM - 19:00 PM" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vye-Vd-8cm">
-                            <rect key="frame" x="32" y="199.5" width="326" height="21"/>
+                            <rect key="frame" x="32" y="220.5" width="326" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="Qsd-aU-7hz"/>
                             </constraints>
@@ -138,20 +145,22 @@
                         <constraint firstItem="6lb-yk-mro" firstAttribute="leading" secondItem="mDh-M2-ODs" secondAttribute="trailing" constant="8" id="DgC-hL-CzY"/>
                         <constraint firstItem="elp-Vx-QgD" firstAttribute="leading" secondItem="IYg-3y-viS" secondAttribute="trailing" constant="8" id="Dsg-Ab-Q0T"/>
                         <constraint firstAttribute="trailing" secondItem="FKV-yh-pq7" secondAttribute="trailing" id="Kfs-Rl-Bli"/>
+                        <constraint firstItem="RTF-mJ-XPg" firstAttribute="leading" secondItem="mDh-M2-ODs" secondAttribute="trailing" constant="8" id="MKc-cQ-djv"/>
                         <constraint firstItem="vye-Vd-8cm" firstAttribute="leading" secondItem="xDi-U0-fpj" secondAttribute="leading" constant="32" id="NxL-x8-L1T"/>
                         <constraint firstItem="mDh-M2-ODs" firstAttribute="top" secondItem="xDi-U0-fpj" secondAttribute="top" constant="12" id="QMb-3j-m36"/>
                         <constraint firstItem="BFu-C8-J7C" firstAttribute="top" secondItem="FKV-yh-pq7" secondAttribute="bottom" constant="16" id="aLy-4g-LGL"/>
                         <constraint firstItem="UW7-0s-EIK" firstAttribute="leading" secondItem="xDi-U0-fpj" secondAttribute="leading" constant="32" id="ccO-B2-muD"/>
                         <constraint firstItem="6lb-yk-mro" firstAttribute="top" secondItem="xDi-U0-fpj" secondAttribute="top" constant="18" id="dx7-Ao-RCJ"/>
                         <constraint firstItem="vye-Vd-8cm" firstAttribute="top" secondItem="28f-Mo-pvi" secondAttribute="bottom" constant="8" id="eXU-G4-MNe"/>
-                        <constraint firstItem="FKV-yh-pq7" firstAttribute="top" secondItem="elp-Vx-QgD" secondAttribute="bottom" constant="28" id="hZt-FG-I0D"/>
-                        <constraint firstItem="IYg-3y-viS" firstAttribute="top" secondItem="6lb-yk-mro" secondAttribute="bottom" constant="8" id="i9e-fA-lYp"/>
+                        <constraint firstItem="FKV-yh-pq7" firstAttribute="top" secondItem="elp-Vx-QgD" secondAttribute="bottom" constant="22" id="hZt-FG-I0D"/>
+                        <constraint firstItem="IYg-3y-viS" firstAttribute="top" secondItem="6lb-yk-mro" secondAttribute="bottom" constant="14" id="i9e-fA-lYp"/>
                         <constraint firstAttribute="height" constant="256" id="lWS-Q1-646"/>
+                        <constraint firstItem="RTF-mJ-XPg" firstAttribute="top" secondItem="6lb-yk-mro" secondAttribute="bottom" constant="14" id="sfW-cP-b0C"/>
                         <constraint firstItem="IYg-3y-viS" firstAttribute="leading" secondItem="mDh-M2-ODs" secondAttribute="trailing" constant="8" id="uxU-dl-zUq"/>
                         <constraint firstAttribute="trailing" secondItem="elp-Vx-QgD" secondAttribute="trailing" constant="45" id="vxo-gS-8ig"/>
                         <constraint firstAttribute="trailing" secondItem="X7l-D3-Ohf" secondAttribute="trailing" constant="7" id="vy5-lG-HVO"/>
-                        <constraint firstItem="X7l-D3-Ohf" firstAttribute="top" secondItem="Akj-gn-8FG" secondAttribute="bottom" constant="-3" id="wUc-Cb-Emr"/>
-                        <constraint firstItem="elp-Vx-QgD" firstAttribute="top" secondItem="6lb-yk-mro" secondAttribute="bottom" constant="5" id="xEW-hW-1wT"/>
+                        <constraint firstItem="X7l-D3-Ohf" firstAttribute="top" secondItem="Akj-gn-8FG" secondAttribute="bottom" constant="3" id="wUc-Cb-Emr"/>
+                        <constraint firstItem="elp-Vx-QgD" firstAttribute="top" secondItem="6lb-yk-mro" secondAttribute="bottom" constant="11" id="xEW-hW-1wT"/>
                         <constraint firstAttribute="trailing" secondItem="6lb-yk-mro" secondAttribute="trailing" constant="45" id="xxO-gu-h2n"/>
                     </constraints>
                 </view>
@@ -161,13 +170,26 @@
                 <constraint firstAttribute="trailing" secondItem="xDi-U0-fpj" secondAttribute="trailing" id="p8L-7v-0xu"/>
                 <constraint firstItem="xDi-U0-fpj" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" id="wg8-u7-Xt6"/>
             </constraints>
+            <connections>
+                <outlet property="btnFavourite" destination="Akj-gn-8FG" id="qxw-M9-7cn"/>
+                <outlet property="btnLocation" destination="X7l-D3-Ohf" id="NXg-3C-gdx"/>
+                <outlet property="imgSalon" destination="mDh-M2-ODs" id="Jwe-MH-ky6"/>
+                <outlet property="lblAddress" destination="BFu-C8-J7C" id="YKQ-H9-Bbf"/>
+                <outlet property="lblEmail" destination="28f-Mo-pvi" id="7uZ-eF-NhG"/>
+                <outlet property="lblOpenTime" destination="vye-Vd-8cm" id="222-7a-pD3"/>
+                <outlet property="lblPhone" destination="UW7-0s-EIK" id="6MX-fr-VgW"/>
+                <outlet property="lblSalonName" destination="6lb-yk-mro" id="syd-Ab-8wi"/>
+                <outlet property="lblTotalComment" destination="elp-Vx-QgD" id="IWj-tJ-pkQ"/>
+                <outlet property="widthContraintStar" destination="XEh-7f-yO7" id="v3e-hX-ed1"/>
+            </connections>
             <point key="canvasLocation" x="-109.5" y="-115.5"/>
         </collectionReusableView>
     </objects>
     <resources>
         <image name="ic_favorite" width="24" height="24"/>
         <image name="ic_map" width="24" height="24"/>
-        <image name="ic_rate" width="80" height="20"/>
+        <image name="ic_star_yellow" width="80" height="20"/>
+        <image name="ic_start_grey" width="80" height="20"/>
         <image name="salon_1" width="150" height="83"/>
     </resources>
 </document>
