--- a/hairista/Controller/ListCommentViewController/CommentCell/CommentCellTableViewCell.xib
+++ b/hairista/Controller/ListCommentViewController/CommentCell/CommentCellTableViewCell.xib
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Roboto-Bold.ttf">
+            <string>Roboto-Bold</string>
+        </array>
         <array key="Roboto-Light.ttf">
             <string>Roboto-Light</string>
         </array>
@@ -20,15 +23,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" rowHeight="79" id="KGk-i7-Jjw" customClass="CommentCellTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" rowHeight="100" id="KGk-i7-Jjw" customClass="CommentCellTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="101"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="100.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_avatar" translatesAutoresizingMaskIntoConstraints="NO" id="pfQ-Hl-FV5">
-                        <rect key="frame" x="8" y="8" width="46" height="46"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_avatar" translatesAutoresizingMaskIntoConstraints="NO" id="pfQ-Hl-FV5">
+                        <rect key="frame" x="8" y="18" width="46" height="46"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="46" id="Gwx-8C-1BL"/>
                             <constraint firstAttribute="height" constant="46" id="P4C-p8-XYP"/>
@@ -40,16 +43,16 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nguyễn Thành Nam" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gLX-ne-Wdc">
-                        <rect key="frame" x="62" y="8" width="213" height="21"/>
+                        <rect key="frame" x="62" y="16" width="167" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="7BA-Nf-sM6"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="15"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Salon làm tóc rất đẹp, rất chuyên nghiệp. Tôi rất thích" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v8F-x5-gLr">
-                        <rect key="frame" x="62" y="33" width="213" height="40"/>
+                        <rect key="frame" x="62" y="41" width="350" height="51.5"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="ow4-hd-P7C"/>
                         </constraints>
@@ -57,51 +60,88 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_like" translatesAutoresizingMaskIntoConstraints="NO" id="Mpm-A9-ham">
-                        <rect key="frame" x="286" y="6" width="26" height="26"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12/02/2012" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6SG-xv-Fsd">
+                        <rect key="frame" x="237" y="16" width="75" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="26" id="DIg-FX-R3c"/>
-                            <constraint firstAttribute="height" constant="26" id="Seg-0F-Ck7"/>
+                            <constraint firstAttribute="height" constant="21" id="RFv-H8-R0H"/>
+                            <constraint firstAttribute="width" constant="75" id="yOL-gB-3a1"/>
                         </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N7S-B8-opK">
-                        <rect key="frame" x="283" y="32" width="29" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="29" id="2bT-OL-MEn"/>
-                            <constraint firstAttribute="height" constant="21" id="VPp-Xd-TZ9"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="14"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="13"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_star" translatesAutoresizingMaskIntoConstraints="NO" id="xcP-PJ-Oq9">
+                        <rect key="frame" x="73" y="45" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="OMs-K3-3GH"/>
+                            <constraint firstAttribute="width" constant="20" id="i6y-CE-ir5"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="efd-R9-ZBY">
+                        <rect key="frame" x="62" y="45" width="14" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="CE9-lq-3Ow"/>
+                            <constraint firstAttribute="width" constant="14" id="CK0-dT-G8g"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="15"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đông đã comment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="arI-1Z-FYM">
+                        <rect key="frame" x="62" y="74" width="250" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="BST-Bk-Xp8"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iG4-kH-Pho">
+                        <rect key="frame" x="54" y="100" width="258" height="0.5"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="0.5" id="0jo-Ok-hq5"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="Mpm-A9-ham" secondAttribute="trailing" constant="8" id="12U-Cv-red"/>
-                    <constraint firstItem="Mpm-A9-ham" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="7fd-GU-NzO"/>
-                    <constraint firstItem="N7S-B8-opK" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="OHB-en-RQd"/>
+                    <constraint firstAttribute="trailing" secondItem="6SG-xv-Fsd" secondAttribute="trailing" constant="8" id="6v8-0Z-1Lu"/>
+                    <constraint firstItem="xcP-PJ-Oq9" firstAttribute="leading" secondItem="pfQ-Hl-FV5" secondAttribute="trailing" constant="19" id="EPq-BP-EUm"/>
+                    <constraint firstItem="arI-1Z-FYM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="54" id="HZv-r0-Ctc"/>
+                    <constraint firstItem="iG4-kH-Pho" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="54" id="Ntm-z7-lyo"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="arI-1Z-FYM" secondAttribute="bottom" priority="750" constant="5.5" id="OIg-ZF-hwC"/>
                     <constraint firstItem="gLX-ne-Wdc" firstAttribute="leading" secondItem="pfQ-Hl-FV5" secondAttribute="trailing" constant="8" id="R7l-Cl-jZ8"/>
-                    <constraint firstItem="Mpm-A9-ham" firstAttribute="leading" secondItem="gLX-ne-Wdc" secondAttribute="trailing" constant="11" id="Xt5-Zm-9Db"/>
+                    <constraint firstItem="6SG-xv-Fsd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="Sfu-Cu-bJ9"/>
+                    <constraint firstItem="arI-1Z-FYM" firstAttribute="top" secondItem="efd-R9-ZBY" secondAttribute="bottom" constant="8" id="YHd-A7-7TU"/>
                     <constraint firstItem="v8F-x5-gLr" firstAttribute="leading" secondItem="pfQ-Hl-FV5" secondAttribute="trailing" constant="8" id="Ydl-Ud-lWi"/>
-                    <constraint firstItem="gLX-ne-Wdc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="YqJ-pk-75j"/>
-                    <constraint firstItem="N7S-B8-opK" firstAttribute="leading" secondItem="v8F-x5-gLr" secondAttribute="trailing" constant="8" id="ZRx-kj-5OS"/>
+                    <constraint firstItem="gLX-ne-Wdc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="YqJ-pk-75j"/>
                     <constraint firstItem="v8F-x5-gLr" firstAttribute="top" secondItem="gLX-ne-Wdc" secondAttribute="bottom" constant="4" id="d2f-Hv-uds"/>
+                    <constraint firstItem="efd-R9-ZBY" firstAttribute="top" secondItem="gLX-ne-Wdc" secondAttribute="bottom" constant="8" id="iI8-ep-tFW"/>
                     <constraint firstItem="v8F-x5-gLr" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" priority="750" id="iLa-mU-SQt"/>
+                    <constraint firstItem="efd-R9-ZBY" firstAttribute="leading" secondItem="pfQ-Hl-FV5" secondAttribute="trailing" constant="8" id="icw-M5-qGN"/>
+                    <constraint firstAttribute="trailing" secondItem="iG4-kH-Pho" secondAttribute="trailing" constant="8" id="nMN-09-Kf7"/>
                     <constraint firstItem="pfQ-Hl-FV5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="p8e-6M-cln"/>
-                    <constraint firstItem="N7S-B8-opK" firstAttribute="top" secondItem="Mpm-A9-ham" secondAttribute="bottom" id="pNQ-Vj-Nch"/>
-                    <constraint firstItem="pfQ-Hl-FV5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="znO-pC-yis"/>
+                    <constraint firstItem="xcP-PJ-Oq9" firstAttribute="top" secondItem="gLX-ne-Wdc" secondAttribute="bottom" constant="8" id="rdX-aO-QTm"/>
+                    <constraint firstAttribute="bottom" secondItem="iG4-kH-Pho" secondAttribute="bottom" id="ruk-WG-jzt"/>
+                    <constraint firstItem="arI-1Z-FYM" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="rxg-vV-aKx"/>
+                    <constraint firstItem="6SG-xv-Fsd" firstAttribute="leading" secondItem="gLX-ne-Wdc" secondAttribute="trailing" constant="8" id="tfE-SJ-ZL9"/>
+                    <constraint firstItem="pfQ-Hl-FV5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="znO-pC-yis"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
-                <outlet property="lblComment" destination="v8F-x5-gLr" id="Xeh-bg-Z7U"/>
+                <outlet property="imgAvatar" destination="pfQ-Hl-FV5" id="fpg-kJ-P6F"/>
+                <outlet property="lblComment" destination="arI-1Z-FYM" id="2dR-zF-ruA"/>
+                <outlet property="lblDateComment" destination="6SG-xv-Fsd" id="bUW-bv-ctd"/>
                 <outlet property="lblName" destination="gLX-ne-Wdc" id="P96-DO-B5D"/>
+                <outlet property="lblNumStar" destination="efd-R9-ZBY" id="Uhs-yW-IDY"/>
             </connections>
-            <point key="canvasLocation" x="-26" y="-138.5"/>
+            <point key="canvasLocation" x="-26" y="-128.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="bg_avatar" width="183" height="193"/>
-        <image name="ic_like" width="26" height="26"/>
+        <image name="ic_avatar" width="30" height="30"/>
+        <image name="ic_star" width="20" height="20"/>
     </resources>
 </document>
