--- a/hairista/Controller/DetailSalon/DetailSalonViewController.xib
+++ b/hairista/Controller/DetailSalon/DetailSalonViewController.xib
@@ -121,6 +121,9 @@
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="542-tl-lxr">
                     <rect key="frame" x="0.0" y="118" width="375" height="549"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="0ts-yQ-vWh"/>
+                    </connections>
                 </scrollView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="br9-2I-QbR">
                     <rect key="frame" x="0.0" y="72" width="375" height="46"/>
