--- a/hairista/Controller/FindSalon/FindSalonViewController.xib
+++ b/hairista/Controller/FindSalon/FindSalonViewController.xib
@@ -119,14 +119,14 @@
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="none" rowHeight="44" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="j1D-FF-ZX2">
                     <rect key="frame" x="0.0" y="72" width="375" height="595"/>
-                    <color key="backgroundColor" red="0.16862745100000001" green="0.21176470589999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="e5a-0S-C1n"/>
                         <outlet property="delegate" destination="-1" id="gqu-am-AeP"/>
                     </connections>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" red="0.1176470588" green="0.1450980392" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Zco-uo-Ke4" secondAttribute="trailing" id="G1r-eV-YIN"/>
                 <constraint firstItem="j1D-FF-ZX2" firstAttribute="top" secondItem="Zco-uo-Ke4" secondAttribute="bottom" id="MuZ-Ld-CFx"/>
