--- a/hairista/View/ProcessDataView/ProcessDataView.xib
+++ b/hairista/View/ProcessDataView/ProcessDataView.xib
@@ -71,6 +71,9 @@
                             <integer key="value" value="2"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="stopUpload:" destination="-1" eventType="touchUpInside" id="aUh-di-Wyd"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="calibratedWhite"/>
